Errors on RC spinking fixed

--- a/parametrizations/Population/Frequency analysis.ipynb
+++ b/parametrizations/Population/Frequency analysis.ipynb
@@ -61,6 +61,7 @@
    ],
    "source": [
     "simDuration_ms = 500\n",
+    "Esyn = 70\n",
     "timeStep_ms = 0.05\n",
     "t = np.arange(0, simDuration_ms, timeStep_ms)\n",
     "availableMNs = range(300)\n",
@@ -4977,7 +4978,7 @@
     "plt.title('compartment voltage')\n",
     "plt.show()\n",
     "\n",
-    "g = np.array(I)/np.array(V)\n",
+    "g = np.array(I)/np.array(V-Esyn)\n",
     "plt.figure()\n",
     "plt.plot(t, g)\n",
     "plt.title('conductance as I/V')\n",
