new simulations, fixes on old notebook and conf files

--- a/parametrizations/Population/InjectedCurrentPSD/Forced frequency analysis.ipynb
+++ b/parametrizations/Population/InjectedCurrentPSD/Forced frequency analysis.ipynb
@@ -57,8 +57,8 @@
    },
    "outputs": [],
    "source": [
-    "def ensambleFR(spikeInstant, unitNumber, motoneuronQuantity, transientPeriod, simDuration):\n",
-    "    units = range(1,motoneuronQuantity+1)\n",
+    "def ensambleFR(spikeInstant, unitNumber, transientPeriod, simDuration):\n",
+    "    units = list(OrderedDict.fromkeys(unitNumber))\n",
     "    \n",
     "    meanFR = []\n",
     "    for unit in units:\n",
@@ -4984,7 +4984,7 @@
     "plt.title('Mean V(t)')\n",
     "plt.show()\n",
     "\n",
-    "ensambleFR(spikeInstant, unitNumber, MNQtd, transientPeriod_ms, simDuration_ms)"
+    "ensambleFR(spikeInstant, unitNumber, transientPeriod_ms, simDuration_ms)"
    ]
   },
   {
@@ -9857,7 +9857,7 @@
     "plt.title('Mean V(t)')\n",
     "plt.show()\n",
     "\n",
-    "ensambleFR(spikeInstant, unitNumber, MNQtd, transientPeriod_ms, simDuration_ms)"
+    "ensambleFR(spikeInstant, unitNumber, transientPeriod_ms, simDuration_ms)"
    ]
   },
   {
@@ -14750,7 +14750,7 @@
     "plt.xlabel('t (ms)')\n",
     "plt.show()\n",
     "\n",
-    "ensambleFR(spikeInstant, unitNumber, MNQtd, transientPeriod_ms, simDuration_ms)"
+    "ensambleFR(spikeInstant, unitNumber, transientPeriod_ms, simDuration_ms)"
    ]
   },
   {
