changes for writing in static and connectivity analysis

--- a/parametrizations/Population/McCurdyHammConnectivity/Connectivity patterns from McCurdy and Hamm (1994a).ipynb
+++ b/parametrizations/Population/McCurdyHammConnectivity/Connectivity patterns from McCurdy and Hamm (1994a).ipynb
@@ -15,7 +15,7 @@
     "\n",
     "## Uchiyama et al. (2003a)\n",
     "* Number of Renshaw cells associated with the medial gastrocnemius $\\alpha$ motoneuron pool is arbitrarily assumed to be 300, but it is not too far away from what has been studied in the literature.\n",
-    "* Topographic distribution according to a gaussian centered in the motoneuron and with standar deviation of 1/6 mm for motoneurons and 3.5/3 mm for Renshaw cells.\n",
+    "* Topographic distribution according to a gaussian centered in the motoneuron and with standard deviation of 1/6 mm for motoneurons and 3.5/3 mm for Renshaw cells.\n",
     "* Synaptic swellings are indications of the strength of an $\\alpha$ motoneuron's synaptic inputs to other spinal neurons. The proportions used are those reported by Cullheim and Kellerth (1978), in which FF number is ca. 1.8 the FR number and ca. 2.2 the S number."
    ]
   },
@@ -32,13 +32,13 @@
    "metadata": {},
    "source": [
     "# Considerations\n",
-    "* The stimulation rate used by McCurdy and Hamm (1994a) does not allow for the motoneuron-Renshaw cell synapse to recover from the post-synaptic depression described in Hultborn and Pierrot-Deseiligny (1979). Therefore, amplitudes reported are probably underestimated.\n",
+    "* The stimulation rate used by McCurdy and Hamm (1994a) does not allow for the motoneuron-Renshaw cell synapse to fully recover from the post-synaptic depression described in Hultborn and Pierrot-Deseiligny (1979). Therefore, amplitudes reported are probably underestimated a bit. This is just a complication I should not wasto too much time on, though.\n",
     "* The distances considered in the simulations included the whole range available whithin 0 to 4.7 mm. Furthermore, only 180 pairs, randomly choosed, were considered. These made the simulation simpler and faster.\n",
     "* The value of 6 mm used here is the length of the medial gastrocnemius neuronal column in the cat.\n",
     "* McCurdy and Hamm (1994a) used stimulations 0.5 ms long with ca. 7 Hz. I used only a soma stimulation with a single pulse because the period of the stimulation described in the paper is enough for the model to go back to resting membrane state. I imagine they used a periodic stimulation to make averages.\n",
     "* The mean values adopted here are the significant ones, because they certainly caused be the recurrent inhibition circuit.\n",
     "* The parameters were adjusted to obtain results that are as close as possible to those reported in literature.\n",
-    "* The boundary zone adopted was 1.4 mm.\n",
+    "* The boundary zone adopted was 1.0 mm.\n",
     "* Parametrization with only weight decay:\n",
     "    * $g_{max_{FF}}$ = 0.0275.\n",
     "    * Small conductances values ($<$0.0275) could not generate higher amplitudes properly and therefore were not adopted.\n",
@@ -108,7 +108,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-d5a1e37b90e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0mrecordedCount\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m13\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0;31m# Random choice to get approximately 180 pairs (14*13=182)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m         \u001b[0mMNCandidateIndex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mavailableMNsIndex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m         \u001b[0mdistance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpositions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mMNCandidateIndex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mpositions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstimulatedMNIndex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0;31m# Ignore recordings out of the boundary or repeated recordings\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-d5a1e37b90e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0mdistance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpositions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mMNCandidateIndex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mpositions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstimulatedMNIndex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0;31m# Ignore recordings out of the boundary or repeated recordings\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0mboundary\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mMNCandidateIndex\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrecordedMN\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m             \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0mrecordedMN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMNCandidateIndex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
